--- a/IdeaProjects/comyetspringcore/pom.xml
+++ b/IdeaProjects/comyetspringcore/pom.xml
@@ -40,7 +40,6 @@
             <version>1.8.12</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
@@ -109,10 +108,11 @@
 
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.10.19</version>
+            <artifactId>mockito-core</artifactId>
+            <version>2.11.0</version>
             <scope>test</scope>
         </dependency>
+
 
         <dependency>
             <groupId>org.mockito</groupId>
@@ -120,7 +120,6 @@
             <version>RELEASE</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
@@ -141,9 +140,4 @@
         </dependency>
 
     </dependencies>
-
-
-
-
-
 </project>
